# RoboCup

./: CMakeLists.txt  CosteVSRecompensa.cpp  CosteVSRecompensa.h  README.md  estructuras.h  functions.cpp  functions.h  main.cpp  main.txt  run_my_team.sh  run_opponent_team.sh
test/: CMakeLists.txt  functions_test.cpp
